# hip-attention

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile.sglang  LICENSE.md  README.md  SAMPLE.md  environment.yml  hip-attention.code-workspace  make_submission.sh  output_bench_models.py  pyproject.toml  requirement_note.txt  requirements-llama-eval-ai21.txt  requirements.dev.txt  requirements.no_build_iso.txt  requirements.openai.txt  requirements.sglang.txt  requirements.txt  requirements.vllm.txt  run_blocksize_albation.sh  run_dl_ablation.sh  sample.md  sample16k.md  sample2k.md  sample32k.md  sample8k.md  sample_booksum.md  sample_mmlu.md  setup.py
.github/workflows/: lint.yml
docs/: REPRODUCE.md  USAGE.sglang.md
hip/: __init__.py
hip/dataset/: booksum_long.py  calib_loft_rag.py  calib_loft_retrieval.py  glue.py  passkey.py
hip/main/: eval_args.py  flux_eval.py  model_eval.py  web_demo.py
hip/models/: attention.py  attn_l1_loss.py  h2o_llama.py  h2o_llama_masked.py  landmark_attention.py  modeling_llama.py  modeling_llama_legacy_h2o.py  modeling_llama_permute.py  sglang_model.py  skewed_attention.py
hip/trainer/: permute_trainer.py  timber_trainer.py
hip/utils/: __init__.py  example.secrets.py  triton_argsort.py
hip_attention/: __init__.py  attention.py  attention1.py  attention1_block_gpu.py  attention1_gpu.py  attention2_draft.py  attention2_draft_causal_batch.py  attention2_draft_causal_batch_gpu.py  attention2_draft_causal_batch_gpu_fused.py  attention2_draft_causal_batch_gpu_fused_vec.py  attention2_draft_prefetch.py  attention2_draft_sampling.py  attention2_draft_sampling_extend.py  attention_norm.py  memory_efficient_llm_ce.py  modeling_llama.py  new_block_sparse.py  rope.py
hip_attention/attention1_block_gpu_kernel/: calc_prob_return_context.py  calc_score_return_prob.py  masking_iteration.py  paged_cache_vllm_compat.py  safe_indices.py
hip_attention/gen3/: __init__.py  attention_decode_bsa.py  attention_extend.py  attention_extend_bsa.py  attention_metadata.py  hip_config.py  hip_memory_pool.py  mask_refresh_interval.py  model_offload_cache.py  paged_hip.py  uvm_gpu_cache.py
hip_attention/models/: modeling_llama.py
hip_attention/offload_runner/: cache_policy.py  llama_model.py  offload_runner.py  tensor_from_pointer.py
hip_attention/scripts/: attention2_test_extend_exps.py  attention2_test_paged_decode.py  bench_argsort_cupy_median.py  bench_attention2_fused_vec_shuffle_head.py  bench_dual_stream_masking.py
hip_attention/tests/: test_attention2_prefetch_bsa.py  test_score_prob.py
hip_attention/utils/: attention.py  benchmarking.py  new_block_sparse.py  rope.py  triton_argsort.py
hip_attention/v1_0/: attention1.py  attention1_block_gpu.py  attention1_gpu.py
hip_attn/: __init__.py
notebook/: hist_runner_indices_unique.ipynb  inspect_sglang_decode.ipynb  plot_latency_after_prefetch.ipynb  qwen_vl.ipynb
samples/: 128k.md  15k.md  16k.md  256k.md  2k.md  32k.md  4k.md  512k.md  64k.md  8k.md  booksum.md  booksum20k.md  booksum32k.md  booksum32k_gemma.md  booksum40k.md  booksum9k.md  mmlu.md  passkey10k.md  passkey5k.md
scripts/: bench_latency_sglang.py  bench_nsys_micro.sh  bench_ruler_models.sh  bench_stream.sh  bench_stream_1.sh  bench_stream_inner.sh  exp_mmlu.sh  exp_ppl_llama.sh  exp_ppl_pg19.sh  run_blocksize_albation.sh  run_booksum.sh  run_dl_ablation.sh  simulate_offload_hit_ratio.sh  test_opanai.py  test_openai.py  test_openai_long.py
src/: README.md
tests/: test_attention1_block_gpu_bwd.py  test_attention1_block_gpu_fwd.py  test_attention1_gpu_bwd.py  test_attention2_prefetch_bsa.py  test_gen3_stage_caching.py  test_openvino_bsa.py  test_paged_attention.py
timber/: __init__.py
(+554 files in other folders)
